--- a/style.css
+++ b/style.css
@@ -6,11 +6,61 @@
 
 header {
     height: 50px;
-background-color: #ff9a4b;
+    background-color: #ff9a4b;
 }
     
 main {
     width: 960px;
-    margin: 50px auto;
+    margin: 50px auto; 
     display: flex;
+
+} 
+
+.step-box {
+    width: 300px;
+    margin-right: 30px;
+    padding: 10px;
+    position: relative;
+    background-color: #eee;
+}
+
+.step-box:last-child {
+    margin-right: 0;
+}
+
+.step-img1 {
+    height: 150px; 
+    background-image: url(img/flow01.png);
+    background-position: bottom;
+    background-size: cover;
+
+}
+
+.step-img2 {
+    height: 150px;
+    background-image: url(img/flow02.png);
+    background-position: bottom;
+    background-size: cover;
+}
+
+.step-img3 {
+    height: 150px;
+    background-image: url(img/flow03.png);
+    background-position: bottom;
+    background-size: cover;
+}
+
+.title {
+    margin:15px 0 5px;
+}
+
+.step-num {
+    position: absolute;
+    background-color: #ff9a4b;
+    color: #fff;
+}
+
+footer {
+    height: 50px;
+    background-color: #aaa;
 }
