--- a/style.css
+++ b/style.css
@@ -66,3 +66,35 @@ footer {
     height: 50px;
     background-color: #aaa;
 }
+
+@media screen and (max-width: 425px) {
+    header {
+        width: 100%;
+        height: 50px;
+    }
+    main {
+        width: 100%;
+    }
+    .step-box {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+
+    }
+    .step-box:nth-child(2) {
+        padding: 20px 0 20px;
+    }
+    .step-image1 {
+        height:150px;
+    }
+    .step-image {
+        height: 150px;
+    }
+    .step-image {
+        height: 150px;
+    }
+    footer {
+        height: 50px;
+        width: 100%;
+    }
+}
