--- a/style.css
+++ b/style.css
@@ -64,10 +64,11 @@ main {
 
 footer {
     height: 50px;
+    width: 100%;
     background-color: #aaa;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
     header {
         width: 100%;
         height: 50px;
@@ -80,8 +81,10 @@ footer {
     }
     .step-box {
         width: 90%;
+        height: auto;
         padding: 10px;
-        margin: auto ;
+        margin: auto;
+        
     }
     .step-box:nth-child(2) {
         margin-top: 20px;
@@ -92,6 +95,7 @@ footer {
     }
     .step-image1 {
         height:150px;
+        
     }
     .step-image2 {
         height: 150px;
@@ -101,6 +105,5 @@ footer {
     }
     footer {
         height: 50px;
-        width: 100%;
     }
 }
